fix: tolerate whitespace in Turnstile siteverify success check; modernize BusyIntervals .getFirst()
Cloudflare returns {"success": true} with a space after the colon, so the literal
contains("\"success\":true") never matched a real success response and every
verification threw AbuseException. Match with a whitespace-tolerant regex instead.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>